# localizable_json_parser

./: Cargo.toml  readme.md
.run/: Test all.run.xml
src/: lib.rs
test_resources/: Localizable.xcstrings  android_xml_nl.xml
test_resources/values/: strings.xml
test_resources/values-nl/: strings.xml
