[package]
name = "swift_localizable_json_parser"
version = "0.1.40"
edition = "2021"
description = "Parse Localizable.xcstrings"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
words-count = "0.1.6"
enum_const_value = "0.4"
log = "0.4"
regex = "1.10"