[package]
name = "swift_localizable_json_parser"
version = "0.1.3"
edition = "2021"
description = "Parse Localizable.xcstrings"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"